add new api for update users data
